# talk-refine

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.yaml  pyproject.toml  run.pyw
prompts/: code.txt  default.txt  meeting.txt
scripts/: install.ps1  start_hidden.vbs
talkrefine/: __init__.py  __main__.py  app.py  config.py  history.py  locale.py  recorder.py
talkrefine/asr/: base.py  sensevoice.py  whisper.py
talkrefine/llm/: base.py  llamacpp.py  none.py  ollama.py  openai_compat.py  prompts.py
talkrefine/platform/: hotkeys.py  session_monitor.py  windows.py
talkrefine/ui/: icon.py  overlay.py  settings.py  tray.py
